--- a/extraction-servlet/pom.xml
+++ b/extraction-servlet/pom.xml
@@ -9,6 +9,9 @@
   </parent>
   <artifactId>extraction-servlet</artifactId>
   <name>extraction-servlet</name>
+  <build>
+  	<finalName>extraction</finalName>
+	</build>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
