--- a/extraction-exemple/pom.xml
+++ b/extraction-exemple/pom.xml
@@ -7,8 +7,8 @@
     <artifactId>outilssgdf</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>extraction-convertisseur</artifactId>
-  <name>extraction-convertisseur</name>
+  <artifactId>extraction-exemple</artifactId>
+  <name>extraction-exemple</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
