--- a/extraction-exemple/pom.xml
+++ b/extraction-exemple/pom.xml
@@ -7,6 +7,7 @@
     <artifactId>outilssgdf</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
+  <groupId>org.leplan73</groupId>
   <artifactId>extraction-exemple</artifactId>
   <name>extraction-exemple</name>
   <properties>
