--- a/extraction-embeddedtomcat/pom.xml
+++ b/extraction-embeddedtomcat/pom.xml
@@ -9,11 +9,6 @@
   </parent>
   <artifactId>extraction-embeddedtomcat</artifactId>
   <name>extraction-embeddedtomcat</name>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
   <dependencies>
   
     <dependency>
@@ -26,14 +21,8 @@
     	<groupId>org.leplan73</groupId>
     	<artifactId>extraction-servlet</artifactId>
     	<version>0.0.1-SNAPSHOT</version>
+        <classifier>classes</classifier>
     </dependency>
-
-		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
-		<dependency>
-		    <groupId>log4j</groupId>
-		    <artifactId>log4j</artifactId>
-		    <version>1.2.17</version>
-		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core -->
 <dependency>
@@ -41,15 +30,23 @@
     <artifactId>tomcat-embed-core</artifactId>
     <version>8.5.34</version>
 </dependency>
-
+<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-jul -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-jul</artifactId>
+    <version>2.11.1</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-slf4j-impl</artifactId>
+    <version>2.11.1</version>
+</dependency>
 <!-- https://mvnrepository.com/artifact/com.sun.el/el-ri -->
 <dependency>
     <groupId>com.sun.el</groupId>
     <artifactId>el-ri</artifactId>
     <version>1.0</version>
 </dependency>
-
-
-
   </dependencies>
 </project>
