--- a/extraction-exemple/pom.xml
+++ b/extraction-exemple/pom.xml
@@ -7,13 +7,9 @@
     <artifactId>outilssgdf</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>org.leplan73</groupId>
   <artifactId>extraction-exemple</artifactId>
   <name>extraction-exemple</name>
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
   <dependencies>
     <dependency>
@@ -21,5 +17,30 @@
     	<artifactId>extraction-convertisseur</artifactId>
     	<version>0.0.1-SNAPSHOT</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/net.sf.jett/jett-core -->
+<dependency>
+    <groupId>net.sf.jett</groupId>
+    <artifactId>jett-core</artifactId>
+    <version>0.11.0</version>
+</dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>3.14</version>
+</dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>3.14</version>
+</dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-1.2-api -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-1.2-api</artifactId>
+    <version>2.11.1</version>
+</dependency>
+    
   </dependencies>
 </project>
