--- a/extraction-cmdline/pom.xml
+++ b/extraction-cmdline/pom.xml
@@ -13,12 +13,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-    <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
-<dependency>
-    <groupId>commons-cli</groupId>
-    <artifactId>commons-cli</artifactId>
-    <version>1.4</version>
-</dependency>
     <dependency>
     	<groupId>org.leplan73</groupId>
     	<artifactId>extraction-convertisseur</artifactId>
@@ -54,6 +48,16 @@
     <artifactId>log4j-api</artifactId>
     <version>2.11.1</version>
 </dependency>
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-log4j12</artifactId>
+    <version>1.7.25</version>
+</dependency>
+<dependency>
+    <groupId>info.picocli</groupId>
+    <artifactId>picocli</artifactId>
+    <version>3.6.1</version>
+</dependency>
   </dependencies>
   <build>
     <plugins>
@@ -61,61 +65,6 @@
     <artifactId>maven-assembly-plugin</artifactId>
     <executions>
     
-    <execution>
-            <id>user_distribution_analyseur_formations</id>
-            <phase>package</phase>
-            <goals>
-                <goal>attached</goal>
-            </goals>
-            <configuration>
-            	<finalName>analyseur_formations</finalName>
-                <descriptors>
-                    <descriptor>src/main/assembly/dist.xml</descriptor>
-                </descriptors>
-                <archive>
-            <manifest>
-              <mainClass>org.leplan73.outilssgdf.cmd.AnalyseurFormations</mainClass>
-            </manifest>
-          </archive>
-            </configuration>
-        </execution>
-        
-    <execution>
-            <id>user_distribution_analyseur</id>
-            <phase>package</phase>
-            <goals>
-                <goal>attached</goal>
-            </goals>
-            <configuration>
-            	<finalName>analyseur</finalName>
-                <descriptors>
-                    <descriptor>src/main/assembly/dist.xml</descriptor>
-                </descriptors>
-                <archive>
-            <manifest>
-              <mainClass>org.leplan73.outilssgdf.cmd.Analyseur</mainClass>
-            </manifest>
-          </archive>
-            </configuration>
-        </execution>
-    	<execution>
-            <id>user_distribution_generateur</id>
-            <phase>package</phase>
-            <goals>
-                <goal>attached</goal>
-            </goals>
-            <configuration>
-            	<finalName>generateur</finalName>
-                <descriptors>
-                    <descriptor>src/main/assembly/dist.xml</descriptor>
-                </descriptors>
-                <archive>
-            <manifest>
-              <mainClass>org.leplan73.outilssgdf.cmd.Generateur</mainClass>
-            </manifest>
-          </archive>
-            </configuration>
-        </execution>
         <execution>
             <id>user_distribution_extracteur</id>
             <phase>package</phase>
@@ -123,31 +72,13 @@
                 <goal>attached</goal>
             </goals>
             <configuration>
-            	<finalName>extracteur</finalName>
+            	<finalName>outilssgdf</finalName>
                 <descriptors>
                     <descriptor>src/main/assembly/dist.xml</descriptor>
                 </descriptors>
                 <archive>
             <manifest>
-              <mainClass>org.leplan73.outilssgdf.cmd.Extracteur</mainClass>
-            </manifest>
-          </archive>
-            </configuration>
-        </execution>
-        <execution>
-            <id>user_distribution_extracteurbatch</id>
-            <phase>package</phase>
-            <goals>
-                <goal>attached</goal>
-            </goals>
-            <configuration>
-            	<finalName>extracteurbatch</finalName>
-                <descriptors>
-                    <descriptor>src/main/assembly/dist.xml</descriptor>
-                </descriptors>
-                <archive>
-            <manifest>
-              <mainClass>org.leplan73.outilssgdf.cmd.ExtracteurBatch</mainClass>
+              <mainClass></mainClass>
             </manifest>
           </archive>
             </configuration>
