--- a/extraction-convertisseur/pom.xml
+++ b/extraction-convertisseur/pom.xml
@@ -77,7 +77,11 @@
     <artifactId>log4j-jcl</artifactId>
     <version>2.11.1</version>
 </dependency>
-
+<dependency>
+        	<groupId>com.jayway.jsonpath</groupId>
+        	<artifactId>json-path</artifactId>
+        	<version>2.4.0</version>
+        </dependency>
 
   </dependencies>
 </project>
