--- a/extraction-cmdline/pom.xml
+++ b/extraction-cmdline/pom.xml
@@ -58,6 +58,11 @@
     <artifactId>picocli</artifactId>
     <version>3.6.1</version>
 </dependency>
+<dependency>
+    <groupId>org.fusesource.jansi</groupId>
+    <artifactId>jansi</artifactId>
+    <version>1.17.1</version>
+</dependency>
   </dependencies>
   <build>
     <plugins>
