corrections et améliorations

--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.leplan73</groupId>
-  <artifactId>outilssgdf</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <url>https://github.com/sbouchex/outilssgdf</url>
-  <packaging>pom</packaging>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
-  <modules>
-    <module>extraction-servlet</module>
-    <module>extraction-embeddedtomcat</module>
-    <module>extraction-convertisseur</module>
-    <module>extraction-cmdline</module>
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.leplan73</groupId>
+	<artifactId>outilssgdf</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<url>https://github.com/sbouchex/outilssgdf</url>
+	<packaging>pom</packaging>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<commons-csv.version>1.6</commons-csv.version>
+		<commons-compress.version>1.18</commons-compress.version>
+		<httpclient.version>4.5.6</httpclient.version>
+		<httpmime.version>4.5.3</httpmime.version>
+		<log4j.version>2.11.1</log4j.version>
+		<jett.version>0.11.0</jett.version>
+		<poi.version>4.0.0</poi.version>
+		<poi.version.old>3.14</poi.version.old>
+		<slf4j.version>1.7.25</slf4j.version>
+		<picocli.version>3.6.1</picocli.version>
+		<jansi.version>1.17.1</jansi.version>
+		<jersey.version>2.27</jersey.version>
+		<tomcat.version>8.5.34</tomcat.version>
+		<jdom.version>2.0.6</jdom.version>
+		<jsoup.version>1.11.3</jsoup.version>
+		<jaxen.version>1.1.6</jaxen.version>
+		<json.path>2.4.0</json.path>
+		<swagger.version>1.5.21</swagger.version>
+		<jersey-guava.version>2.6</jersey-guava.version>
+		<servlet-api.version>3.1.0</servlet-api.version>
+		<el-ri.version>1.0</el-ri.version>
+	</properties>
+	<modules>
+		<module>extraction-servlet</module>
+		<module>extraction-embeddedtomcat</module>
+		<module>extraction-convertisseur</module>
+		<module>extraction-cmdline</module>
+	</modules>
 </project>
