--- a/extraction-embeddedtomcat/pom.xml
+++ b/extraction-embeddedtomcat/pom.xml
@@ -1,52 +1,54 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.leplan73</groupId>
-    <artifactId>outilssgdf</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>extraction-embeddedtomcat</artifactId>
-  <name>extraction-embeddedtomcat</name>
-  <dependencies>
-  
-    <dependency>
-    	<groupId>org.leplan73</groupId>
-    	<artifactId>extraction-convertisseur</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    
-    <dependency>
-    	<groupId>org.leplan73</groupId>
-    	<artifactId>extraction-servlet</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
-        <classifier>classes</classifier>
-    </dependency>
-		
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.leplan73</groupId>
+		<artifactId>outilssgdf</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>extraction-embeddedtomcat</artifactId>
+	<name>extraction-embeddedtomcat</name>
+	<dependencies>
+
+		<dependency>
+			<groupId>org.leplan73</groupId>
+			<artifactId>extraction-convertisseur</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.leplan73</groupId>
+			<artifactId>extraction-servlet</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<classifier>classes</classifier>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core -->
-<dependency>
-    <groupId>org.apache.tomcat.embed</groupId>
-    <artifactId>tomcat-embed-core</artifactId>
-    <version>8.5.34</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-jul -->
-<dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-jul</artifactId>
-    <version>2.11.1</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
-<dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-slf4j-impl</artifactId>
-    <version>2.11.1</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/com.sun.el/el-ri -->
-<dependency>
-    <groupId>com.sun.el</groupId>
-    <artifactId>el-ri</artifactId>
-    <version>1.0</version>
-</dependency>
-  </dependencies>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+			<version>${tomcat.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-jul -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-jul</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.sun.el/el-ri -->
+		<dependency>
+			<groupId>com.sun.el</groupId>
+			<artifactId>el-ri</artifactId>
+			<version>${el-ri.version}</version>
+		</dependency>
+	</dependencies>
 </project>
