--- a/extraction-embeddedtomcat/pom.xml
+++ b/extraction-embeddedtomcat/pom.xml
@@ -7,12 +7,14 @@
 	<parent>
 		<groupId>org.leplan73</groupId>
 		<artifactId>outilssgdf</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
 	<artifactId>extraction-embeddedtomcat</artifactId>
 	<name>extraction-embeddedtomcat</name>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<dependencies>
-
 		<dependency>
 			<groupId>org.leplan73</groupId>
 			<artifactId>extraction-convertisseur</artifactId>
