--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.leplan73</groupId>
 	<artifactId>outilssgdf</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<url>https://github.com/sbouchex/outilssgdf</url>
 	<packaging>pom</packaging>
 	<properties>
@@ -33,11 +31,12 @@
 		<jersey-guava.version>2.6</jersey-guava.version>
 		<servlet-api.version>3.1.0</servlet-api.version>
 		<el-ri.version>1.0</el-ri.version>
+		<jcabi.version>1.1</jcabi.version>
 	</properties>
 	<modules>
 		<module>extraction-servlet</module>
 		<module>extraction-embeddedtomcat</module>
 		<module>extraction-convertisseur</module>
 		<module>extraction-cmdline</module>
-	</modules>
+  </modules>
 </project>
