--- a/extraction-cmdline/pom.xml
+++ b/extraction-cmdline/pom.xml
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>org.leplan73</groupId>
 			<artifactId>extraction-convertisseur</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.jett</groupId>
