--- a/extraction-convertisseur/pom.xml
+++ b/extraction-convertisseur/pom.xml
@@ -86,6 +86,10 @@
 			<artifactId>json-path</artifactId>
 			<version>${json.path}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.jcabi</groupId>
+			<artifactId>jcabi-manifests</artifactId>
+			<version>${jcabi.version}</version>
+		</dependency>
 	</dependencies>
 </project>
