--- a/extraction-servlet/pom.xml
+++ b/extraction-servlet/pom.xml
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>org.leplan73</groupId>
 			<artifactId>extraction-convertisseur</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/io.swagger/swagger-jersey2-jaxrs -->
