--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<servlet-api.version>3.1.0</servlet-api.version>
 		<el-ri.version>1.0</el-ri.version>
 		<jcabi.version>1.1</jcabi.version>
+		<logback.version>1.2.3</logback.version>
 	</properties>
 	<modules>
 		<module>servlet</module>
