--- a/cmd/pom.xml
+++ b/cmd/pom.xml
@@ -9,15 +9,15 @@
 		<artifactId>outilssgdf</artifactId>
 		<version>0.0.2</version>
 	</parent>
-	<artifactId>app</artifactId>
-	<name>app</name>
+	<artifactId>cmd</artifactId>
+	<name>cmd</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.leplan73</groupId>
-			<artifactId>convertisseur</artifactId>
+			<artifactId>common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
@@ -64,10 +64,10 @@
 			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
-    <groupId>org.slf4j</groupId>
-    <artifactId>slf4j-simple</artifactId>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
 			<version>${slf4j.version}</version>
-</dependency>
+		</dependency>
 		<dependency>
 			<groupId>info.picocli</groupId>
 			<artifactId>picocli</artifactId>
@@ -83,7 +83,6 @@
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
 		</dependency>
-
 	</dependencies>
 	<build>
 		<plugins>
@@ -105,35 +104,6 @@
 						</manifestEntries>
 					</archive>
 				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>user_distribution_extracteur</id>
-						<phase>package</phase>
-						<goals>
-							<goal>attached</goal>
-						</goals>
-						<configuration>
-							<finalName>outilssgdf</finalName>
-							<descriptors>
-								<descriptor>src/main/assembly/dist.xml</descriptor>
-							</descriptors>
-							<archive>
-								<manifest>
-									<mainClass></mainClass>
-								</manifest>
-								<manifestEntries>
-									<url>${project.url}</url>
-									<nom>${project.artifactId}</nom>
-									<version>${project.version}</version>
-									<Build-Time>${maven.build.timestamp}</Build-Time>
-								</manifestEntries>
-							</archive>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
