--- a/servlet/pom.xml
+++ b/servlet/pom.xml
@@ -46,7 +46,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.leplan73</groupId>
-			<artifactId>convertisseur</artifactId>
+			<artifactId>common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
