--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.leplan73</groupId>
 		<artifactId>outilssgdf</artifactId>
-		<version>0.0.2</version>
+		<version>0.0.3</version>
 	</parent>
 	<artifactId>assembly</artifactId>
 	<packaging>pom</packaging>
@@ -51,6 +51,8 @@
 					<descriptors>
 						<descriptor>src/main/assembly/package.xml</descriptor>
 					</descriptors>
+					  <finalName>outilssgdf-${project.version}</finalName>
+					  <appendAssemblyId>false</appendAssemblyId>
 				</configuration>
 				<executions>
 					<execution>
