Fournir des chemins de d'entrée et sortie pré-configurés #6

--- a/assembly/src/main/assembly/package.xml
+++ b/assembly/src/main/assembly/package.xml
@@ -53,5 +53,9 @@
     <directory>../fichiers/conf</directory>
     <outputDirectory>./conf</outputDirectory>
   </fileSet>
+  <fileSet>
+    <directory>../fichiers/données</directory>
+    <outputDirectory>./données</outputDirectory>
+  </fileSet>
 </fileSets>
 </assembly>
