packaging et script mac

--- a/assembly/src/main/assembly/package.xml
+++ b/assembly/src/main/assembly/package.xml
@@ -56,6 +56,11 @@
   <fileSet>
     <directory>../fichiers/données</directory>
     <outputDirectory>./données</outputDirectory>
+    <excludes>
+        <exclude>*.xml</exclude>
+        <exclude>*.xls</exclude>
+        <exclude>*.xlsx</exclude>
+      </excludes>
   </fileSet>
 </fileSets>
 </assembly>
