--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,17 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<commons-csv.version>1.6</commons-csv.version>
 		<commons-compress.version>1.18</commons-compress.version>
-		<httpclient.version>4.5.8</httpclient.version>
-		<httpmime.version>4.5.8</httpmime.version>
-		<jxls.version>2.6.0</jxls.version>
-		<jxls-poi.version>2.6.0-rc1</jxls-poi.version>
-		<slf4j.version>1.7.26</slf4j.version>
-		<picocli.version>3.9.5</picocli.version>
+		<httpclient.version>4.5.6</httpclient.version>
+		<httpmime.version>4.5.3</httpmime.version>
+		<log4j.version>2.11.1</log4j.version>
+		<jett.version>0.11.0</jett.version>
+		<poi.version>4.0.0</poi.version>
+		<poi.version.old>3.14</poi.version.old>
+		<slf4j.version>1.7.25</slf4j.version>
+		<picocli.version>3.6.1</picocli.version>
+		<jansi.version>1.17.1</jansi.version>
 		<jersey.version>2.27</jersey.version>
-		<tomcat.version>8.5.39</tomcat.version>
+		<tomcat.version>8.5.34</tomcat.version>
 		<jdom.version>2.0.6</jdom.version>
 		<jsoup.version>1.11.3</jsoup.version>
 		<jaxen.version>1.1.6</jaxen.version>
