--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -40,12 +40,12 @@
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
-			<version>${poi.version.old}</version>
+			<version>${poi.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
-			<version>${poi.version.old}</version>
+			<version>${poi.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
