--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,8 @@
 		<commons-compress.version>1.18</commons-compress.version>
 		<httpclient.version>4.5.6</httpclient.version>
 		<httpmime.version>4.5.3</httpmime.version>
-		<log4j.version>2.11.1</log4j.version>
-		<jett.version>0.11.0</jett.version>
+		<jett.version>0.11.1-SNAPSHOT</jett.version>
 		<poi.version>4.0.1</poi.version>
-		<poi.version.old>3.14</poi.version.old>
 		<slf4j.version>1.7.25</slf4j.version>
 		<picocli.version>3.6.1</picocli.version>
 		<jansi.version>1.17.1</jansi.version>
