Utilisation de jett 0.11.1

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<commons-compress.version>1.18</commons-compress.version>
 		<httpclient.version>4.5.6</httpclient.version>
 		<httpmime.version>4.5.3</httpmime.version>
-		<jett.version>0.11.1-SNAPSHOT</jett.version>
+		<jett.version>0.11.1</jett.version>
 		<poi.version>4.0.1</poi.version>
 		<slf4j.version>1.7.25</slf4j.version>
 		<picocli.version>3.9.6</picocli.version>
