[maven-release-plugin] prepare release 1.0.1

--- a/servlet/pom.xml
+++ b/servlet/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.leplan73</groupId>
 		<artifactId>outilssgdf</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.0.1</version>
 	</parent>
 	<artifactId>servlet</artifactId>
 	<name>servlet</name>
