--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -81,7 +81,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.4.1</version>
+				<version>3.1.1</version><!--$NO-MVN-MAN-VER$-->
 				<configuration>
 					<finalName>outilssgdf-gui</finalName>
 					<appendAssemblyId>false</appendAssemblyId>
