--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 		<el-ri.version>1.0</el-ri.version>
 		<jcabi.version>1.1</jcabi.version>
 		<logback.version>1.2.3</logback.version>
+		<influxdb.version>2.15</influxdb.version>
 	</properties>
 	<modules>
 		<module>servlet</module>
