--- a/common/pom.xml
+++ b/common/pom.xml
@@ -89,7 +89,7 @@
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path</artifactId>
-			<version>${json.path}</version>
+			<version>${json-path.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.jcabi</groupId>
