--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 		<logback.version>1.2.3</logback.version>
 		<influxdb.version>2.15</influxdb.version>
 		<h2.version>1.4.199</h2.version>
+		<htmlunit.version>2.36.0</htmlunit.version>
 	</properties>
 	<modules>
 		<module>servlet</module>
