--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.leplan73</groupId>
 		<artifactId>outilssgdf</artifactId>
-		<version>1.3.0-beta3</version>
+		<version>1.3.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>common</artifactId>
 	<name>common</name>
