--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
 		<logback.version>1.2.3</logback.version>
 		<influxdb.version>2.17</influxdb.version>
 		<htmlunit.version>2.36.0</htmlunit.version>
+		<jdatepicker.version>1.3.4</jdatepicker.version>
 	</properties>
 	<modules>
 		<module>analytiscout-common</module>
