--- a/analytiscout-gui/pom.xml
+++ b/analytiscout-gui/pom.xml
@@ -14,29 +14,24 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>info.picocli</groupId>
 			<artifactId>picocli</artifactId>
-			<version>${picocli.version}</version>
+			<version>3.9.6</version>
 		</dependency>
 		<dependency>
 			<groupId>com.jcabi</groupId>
 			<artifactId>jcabi-manifests</artifactId>
-			<version>${jcabi.version}</version>
+			<version>1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>${logback.version}</version>
+			<version>1.2.3</version>
 		</dependency>
 		<dependency>
     <groupId>org.jdatepicker</groupId>
     <artifactId>jdatepicker</artifactId>
-    <version>${jdatepicker.version}</version>
+    <version>1.3.4</version>
 </dependency>
 		
 	</dependencies>
